<resources>
    <string name="app_name">Insta</string>
    <string name="header_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">New User</string>
    <string name="menu_log_out">Log Out</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_submit_post">Submit Post</string>
    <string name="hint_caption">Include a caption!</string>
    <string name="sample_uploadedBy">uploadedby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_caption">captioncaptioncaptioncaptioncaptioncaptioncaptioncaptioncaptioncaptioncaption</string>
    <string name="sample_uploadDate">right now</string>
</resources>